<resources>
    <string name="app_name">Soccer Info</string>
    <string name="last_update">Last updated: %s</string>
    <string name="caption">Caption: %s</string>
    <string name="league">League: %s</string>
    <string name="year">Year: %s</string>
    <string name="current_match_day">Current match day: %d</string>
    <string name="number_of_match_days">Number of match days: %d</string>
    <string name="number_of_teams">Number of teams: %d</string>
    <string name="number_of_games">Number of games: %d</string>
    <string name="details">Details</string>
    <string name="team">Team</string>
    <string name="plaed_games_abrev">PL</string>
    <string name="wins_abrev">W</string>
    <string name="draws_abrev">D</string>
    <string name="loses_abrev">L</string>
    <string name="goals_abrev">F</string>
    <string name="goals_against_abrev">A</string>
    <string name="goals_difference_abrev">GD</string>
    <string name="points_abrev">PT</string>
    <string name="number_sign">#</string>
    <string name="svg_resorurce">.svg</string>
    <string name="legue_table">League Table</string>
    <string name="champion_legue_key">CL</string>
    <string name="name">Name: %s</string>
    <string name="code">Code: %s</string>
    <string name="short_name">Short name: %s</string>
    <string name="players">Players</string>
    <string name="player_details">Player details</string>
    <string name="position">Position: %s</string>
    <string name="number">Number: %d</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="nationality">Nationality:</string>
    <string name="contract_until">Contract until:</string>
</resources>
